--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "game_test",
+  "homepage": "https://debi7.github.io//",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "deploy": "gh-pages -d dist",
     "start": "webpack serve",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,5 +27,8 @@
     "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.2.0"
+  },
+  "dependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
