--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "game_test",
-  "homepage": "https://debi7.github.io//",
+  "homepage": "https://debi7.github.io/Game_2048/",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
